bin/mni1670/MyABGrammar.jj
/**
 * JavaCC template file created by SF JavaCC plugin 1.5.28+ wizard for JavaCC 1.5.0+
 */
options
{
  LOOKAHEAD= 2; // (default 1)

  static = false;
}

PARSER_BEGIN(MyABGrammar)
package mni1670;
import java.io.File;
import java.io.FileInputStream;
import java.io.IOException;

public class MyABGrammar
{
  public static void main(String args []) throws ParseException
  {
    try
    {
      MyABGrammar parser = new MyABGrammar(new FileInputStream("text.txt"));
      while (true)
      {
        System.out.println("Reading from standard input...");
        try
        {
          parser.s();
        }
        catch (Exception e)
        {
          System.out.println("N.OK.");
          System.out.println(e.getMessage());
          break;
        }
        catch (Error e)
        {
          System.out.println("Oops.");
          System.out.println(e.getMessage());
          break;
        }
      }
    }
    catch (Exception ex)
    {
    }	
  }
}

PARSER_END(MyABGrammar)

SKIP :
{
  " "
| "\r"
| "\t"
| "\n"
}

TOKEN : /* OPERATORS */
{
  < A : "*" >
| < B : "1" >
}

void s() :
{}
{
  < A > [ b() ] < EOF >
}

void b() :
{}
{
  < B > (< B >)*
}
